--- a/ansible.cfg
+++ b/ansible.cfg
@@ -58,7 +58,7 @@ inventory      = /root/gtrigo/AnsibleRep/hosts
 # roles_path    = /usr/local/share/juniper-ansible-roles:/etc/ansible/roles
 
 # uncomment this to disable SSH key host checking
-#host_key_checking = False
+host_key_checking = False
 
 # change the default callback
 stdout_callback = skippy
