--- a/create_users.yml
+++ b/create_users.yml
@@ -2,7 +2,7 @@
 - 
   connection: local
   gather_facts: false
-  hosts: all
+  hosts: nodos-c
   roles:
   - Juniper.junos
 
@@ -14,7 +14,7 @@
     - 
       junos_jsnapy: 
         action: snap_pre
-        host: "{{ inventory_hostname }}"
+        host: "{{ junos_host }}"
         user: "{{ credentials.username }}"
         passwd: "{{ credentials.password }}"
         test_files: ../jsnapy/tests/test1.yml
