--- a/create_users.yml
+++ b/create_users.yml
@@ -17,7 +17,7 @@
         host: "{{ junos_host }}"
         user: "{{ credentials.username }}"
         passwd: "{{ credentials.password }}"
-        test_files: ../jsnapy/tests/test1.yml
+        test_files: /root/gtrigo/AnsibleRep/jsnapy/tests/test1.yml
       name: "Collect Pre Snapshot"
 
     -
@@ -26,25 +26,25 @@
         src: "files/{{inventory_hostname}}_users.conf"
         src_format: text
         comment: 'adding some users'
-        host: "{{inventory_hostname}}"
+        host: "{{junos_host}}"
       name: "install users"
 
 
     - name: Collect Post Snapshot
       junos_jsnapy:
-        host: "{{ inventory_hostname }}"
+        host: "{{ junos_host }}"
         user: "{{ credentials.username }}"
         passwd: "{{ credentials.password }}"
         action: "snap_post"
-        test_files: ../jsnapy/tests/test1.yml
+        test_files: /root/gtrigo/AnsibleRep/jsnapy/tests/test1.yml
 
     - name: Compare snapshots
       junos_jsnapy:
-        host: "{{ inventory_hostname }}"
+        host: "{{ junos_host }}"
         user: "{{ credentials.username }}"
         passwd: "{{ credentials.password }}"
         action: "check"
-        test_files: ../jsnapy/tests/test1.yml
+        test_files: /root/gtrigo/AnsibleRep/jsnapy/tests/test1.yml
       register: test_check
 
     - name: Debug jsnapy
@@ -64,11 +64,11 @@
 
     - name: Check Users
       junos_jsnapy:
-       host: "{{ inventory_hostname }}"
+       host: "{{ junos_host }}"
        user: "{{ credentials.username }}"
        passwd: "{{ credentials.password }}"
        action: "snapcheck"
-       test_files: ../jsnapy/tests/test2.yml
+       test_files: /root/gtrigo/AnsibleRep/jsnapy/tests/test2.yml
       register: test_check_2
 
     - name: Debug jsnapy
