--- a/vars/vpls-b.yml
+++ b/vars/vpls-b.yml
@@ -1,1 +1,23 @@
+---
+instancias:
+ - 
+   name: vpls-node-b-1
+   loopback: 3.3.3.3
+   ID:10
+ - 
+   name: vpls-node-b-2
+   loopback: 6.6.6.6
+   ID:20
+ - 
+   name: vpls-node-b-3
+   loopback: 4.4.4.4
+   ID:30
 
+
+loopbacks_nodos_C:
+ - 
+    lo0: 8.8.8.8
+ - 
+    lo0: 9.9.9.9
+ - 
+    lo0: 5.5.5.5
