--- a/vars/vpls-b1.yml
+++ b/vars/vpls-b1.yml
@@ -4,20 +4,23 @@ instancias:
    name: node-b-10
    loopback: 3.3.3.3
    ID: 10
+   site-identifier 1
  - 
    name: node-b-20
-   loopback: 6.6.6.6
+   loopback: 3.3.3.3
    ID: 20
+   site-identifier 1
  - 
    name: node-b-30
-   loopback: 4.4.4.4
+   loopback: 3.3.3.3
    ID: 30
-
-
-loopbacks_nodos_c:
- - 
+   site-identifier 1
+   
+ loopbacks_nodos_c:
+  - 
     loopb: 8.8.8.8
- - 
+  -
     loopb: 9.9.9.9
- - 
-    loopb: 5.5.5.5
+
+
+
