--- a/create_users.yml
+++ b/create_users.yml
@@ -9,7 +9,7 @@
   tasks:
 
     - 
-      template: "src='templates/vpls-b1.j2' dest='files/{{inventory_hostname}}_vpls.conf'"
+      template: "src='templates/vpls-b.j2' dest='files/{{inventory_hostname}}_vpls.conf'"
 
 #    - 
 #      junos_jsnapy: 
