--- a/create_users.yml
+++ b/create_users.yml
@@ -10,6 +10,24 @@
 
     - 
       template: "src='templates/vpls-b.j2' dest='files/{{inventory_hostname}}_vpls.conf'"
+      
+  vars_files: 
+    - vars/vpls-b1.yml 
+    
+- 
+  connection: local
+  gather_facts: false
+  hosts: Nodo-B2
+  roles:
+  - Juniper.junos
+
+  tasks:
+
+    - 
+      template: "src='templates/vpls-b.j2' dest='files/{{inventory_hostname}}_vpls.conf'"
+      
+  vars_files: 
+    - vars/vpls-b2.yml 
 
 #    - 
 #      junos_jsnapy: 
@@ -76,5 +94,4 @@
 #       msg: "{{ test_check_2 }}"      
 
 
-  vars_files: 
-    - vars/vpls-b1.yml 
+
