--- a/create_users.yml
+++ b/create_users.yml
@@ -10,6 +10,14 @@
 
     - 
       template: "src='templates/vpls-b.j2' dest='files/{{inventory_hostname}}_vpls.conf'"
+    -
+      junos_config:
+        provider: "{{credentials}}"
+        src: "files/{{inventory_hostname}}_vpls.conf"
+        src_format: text
+        comment: 'adding vpls'
+        host: "{{junos_host}}"
+      name: "install users"
       
   vars_files: 
     - vars/vpls-b1.yml 
@@ -25,6 +33,14 @@
 
     - 
       template: "src='templates/vpls-b.j2' dest='files/{{inventory_hostname}}_vpls.conf'"
+    -
+      junos_config:
+        provider: "{{credentials}}"
+        src: "files/{{inventory_hostname}}_vpls.conf"
+        src_format: text
+        comment: 'adding vpls'
+        host: "{{junos_host}}"
+      name: "install users" 
       
   vars_files: 
     - vars/vpls-b2.yml 
@@ -39,6 +55,14 @@
   tasks:
     - 
       template: "src='templates/vpls-b.j2' dest='files/{{inventory_hostname}}_vpls.conf'"
+    -
+      junos_config:
+        provider: "{{credentials}}"
+        src: "files/{{inventory_hostname}}_vpls.conf"
+        src_format: text
+        comment: 'adding vpls'
+        host: "{{junos_host}}"
+      name: "install users"
       
   vars_files: 
     - vars/vpls-b3.yml
@@ -52,14 +76,6 @@
 #        test_files: /root/gtrigo/AnsibleRep/jsnapy/tests/test1.yml
 #      name: "Collect Pre Snapshot"
 #
-#    -
-#      junos_config:
-#        provider: "{{credentials}}"
-#        src: "files/{{inventory_hostname}}_users.conf"
-#        src_format: text
-#        comment: 'adding some users'
-#        host: "{{junos_host}}"
-#      name: "install users"
 #
 #
 #    - name: Collect Post Snapshot
